--- a/src/app/feature/home/cursos/cursos.component.html
+++ b/src/app/feature/home/cursos/cursos.component.html
@@ -1,21 +1,11 @@
-<div class="header-topic">   
-        <div class="header-topic-colum tile-topic"> 
-            <div class="col-6  truncated backg">
-                <h1 class="color-blanco" style="font-size: 40px;">Temáticas</h1>
-                <p class="text-2xl" style="color: white;">Explora y Aprende: <span
-                        class=" text-3xl color-blanco">Temáticas para un
-                        futuro sostenible</span></p>
-                <p style="font-weight: 20; color: white; font-size: 15px; text-align: justify;">Encontrarás
-                    temáticas centradas en la conservación del medio ambiente.
-                    Desde el Uso racional de Recursos, Manejo integral de los Residuos Sólidos, Calentamiento
-                    global, Tráfico ilegal de especies de flora y fauna, ofrecemos una variedad de temáticas
-                    para
-                    profundizar tu comprensión y habilidades en temas ambientales clave. Explora nuestras
-                    opciones
-                    educativas y únete a nosotros en el camino hacia un futuro más sostenible.</p>
-
-            </div>
+<div class="header-topic" style="margin-top: 20px;">
+    <div class="header-topic-colum tile-topic">
+        <div class="col-lg-6 col-md-8 col-sm-10 col-xs-12 truncated backg">
+            <h1 class="color-blanco" style="font-size: 40px;">Temáticas</h1>
+            <p class="text-lg text-xl-sm text-2xl-xs" style="color: white;">Explora y Aprende: <span class="text-xl text-3xl-xs color-blanco">Temáticas para un futuro sostenible</span></p>
+            <p style="font-weight: 400; color: white; font-size: 15px; text-align: justify;">Encontrarás temáticas centradas en la conservación del medio ambiente. Desde el Uso racional de Recursos, Manejo integral de los Residuos Sólidos, Calentamiento global, Tráfico ilegal de especies de flora y fauna, ofrecemos una variedad de temáticas para profundizar tu comprensión y habilidades en temas ambientales clave. Explora nuestras opciones educativas y únete a nosotros en el camino hacia un futuro más sostenible.</p>
         </div>
+    </div>
 </div>
 
 <div class="cursos-content">
