--- a/src/app/feature/home/temas-contenido/temas-contenido.component.html
+++ b/src/app/feature/home/temas-contenido/temas-contenido.component.html
@@ -2,7 +2,7 @@
     <div class="header-topic-row">
         <div class="header-topic-colum tile-topic">
             <p>Ambiente</p>
-            <h1>Recicla y Recicla y Transforma</h1>
+            <h1>Recicla y Transforma</h1>
             <p>Por AMBIEFAC Academy</p>
         </div>
         <div class="header-topic-colum image-topic">
@@ -14,7 +14,7 @@
 <div class="information-topic">
     <h2>Temas Esenciales para una Vida Sostenible</h2>
     <div class="information-topic-row">
-        <div class="information-topic-colum ">
+        <div class="information-topic-colum">
             <div class="information-topic-row" *ngFor="let tema of [1,2,3,4]; index as i">
                 <div class="card-topic">
                     <div class="card-topic-row">
@@ -23,8 +23,7 @@
                         </div>
                         <div class="card-topic-colum information-card">
                             <div class="information-card-row title">Importancia del Reciclaje</div>
-                            <div class="information-card-row info">Beneficios ambientales, sociales y económicos del
-                                reciclaje.</div>
+                            <div class="information-card-row info">Beneficios ambientales, sociales y económicos del reciclaje.</div>
                         </div>
                         <div class="card-topic-colum button-card"><button class="button-start">Comenzar</button></div>
                     </div>
