--- a/src/app/feature/home/temas-contenido/temas-contenido.component.scss
+++ b/src/app/feature/home/temas-contenido/temas-contenido.component.scss
@@ -45,14 +45,14 @@ body {
     }
 }
 
-.image-topic {
-    img {
-        max-width: 100%;
-        height: auto;
-        border-radius: 8px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
+.image-topic img {
+    max-width: 100%; /* La imagen ocupará todo el ancho del contenedor */
+    height: auto; /* Mantendrá la proporción de aspecto */
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    image-rendering: -webkit-optimize-contrast; /* Para mejorar la renderización en navegadores WebKit */
 }
+
 
 
 @media (max-width: 768px) {
