--- a/src/app/feature/academy/client/components/mi-aprendizaje/mi-aprendizaje.component.scss
+++ b/src/app/feature/academy/client/components/mi-aprendizaje/mi-aprendizaje.component.scss
@@ -1,3 +1,7 @@
+.margintop{
+  margin-top: 100px;
+}
+
 .fondo2 {
   background-image: url("../../../../../../assets/portada-client.jpg");
   background-repeat: no-repeat;
