--- a/src/app/feature/academy/learning/components/course/course.component.html
+++ b/src/app/feature/academy/learning/components/course/course.component.html
@@ -6,7 +6,7 @@
         <ng-container *ngSwitchCase="'text'">
           <section [id]="i">
             <h2>{{ item.title }}</h2>
-            <p class="text-jump">{{ item.content }}</p>
+            <p class="text-jump text-justify">{{ item.content }}</p>
           </section>
         </ng-container>
         <ng-container *ngSwitchCase="'image'">
