--- a/src/app/feature/admin/contenido-curso/components/subtemas-curso/subtemas-curso.component.html
+++ b/src/app/feature/admin/contenido-curso/components/subtemas-curso/subtemas-curso.component.html
@@ -14,7 +14,7 @@
       <h3 class="text-lg text-black font-semibold  cursor-pointer m-0 texto-recortado w-50 border-r-2">{{ subtema.name }}</h3>
       <i class="fas fa-edit text-black mx-4 cursor-pointer" ngbTooltip="Actualizar subtema" (click)="onUpdate(subtema)"></i>
       <i class="fas fa-trash text-black mx-2 cursor-pointer" ngbTooltip="Eliminar subtema" (click)="OnDelete(subtema.id)"></i>
-      <div class="flex items-center justify-end ml-auto cursor-pointer" ngbTooltip="Ver su informacion"
+      <div class="flex items-center justify-end ml-auto cursor-pointer" ngbTooltip="Ver su información"
         (click)="redirecToUpdateTema(subtema.id, subtema.name)">
         <svg xmlns="http://www.w3.org/2000/svg" height="16" width="10" class="mx-5"
           viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.-->
