--- a/src/app/feature/admin/cursos/components/actualizar-cruso/actualizar-cruso.component.html
+++ b/src/app/feature/admin/cursos/components/actualizar-cruso/actualizar-cruso.component.html
@@ -40,7 +40,7 @@
       </div>
     </div>
     <div class="m-2 w-[50%]">
-      <label for="description" class="block mb-2 text-sm font-medium text-gray-900">Descriocion</label>
+      <label for="description" class="block mb-2 text-sm font-medium text-gray-900">Descripción</label>
       <textarea id="description" formControlName="description"
         placeholder="Ejemplo: Aprende las mejores prácticas para la gestión sostenible de residuos....... "
         class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
