--- a/src/app/feature/components/navbar/navbar.component.html
+++ b/src/app/feature/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
     <li (click)="scrollToElement('inicio')"><a>Inicio</a></li>
     <li (click)="redirecToCursos()"><a>Temáticas</a></li>
     <li class="dropdown" *ngIf="response.success" (click)="toggleDropdown()">
-      <a>LogIn <i class="fa-solid fa-chevron-down ml-2"></i></a>
+      <a>Login <i class="fa-solid fa-chevron-down ml-2"></i></a>
     </li>
     <div class="dropdown-content" *ngIf="showDropdown">
       <ul>
