--- a/src/app/feature/home/cursos/cursos.component.html
+++ b/src/app/feature/home/cursos/cursos.component.html
@@ -20,7 +20,7 @@
                 <p>{{row.description}}</p>
                 <div class="level-curso">Intermedio</div>
             </div>
-            <button class="mas-information-curso" (click)="navegarAInformacion(row.id)">Mas informacion</button>
+            <button class="mas-information-curso" (click)="navegarAInformacion(row.id)">Más información</button>
         </div>
     </div>
 </div>
