--- a/src/app/feature/home/inicio/inicio.component.html
+++ b/src/app/feature/home/inicio/inicio.component.html
@@ -47,7 +47,7 @@
     <section id="cursos-gratis" class="w-full flex flex-col-reverse md:flex-row p-0 animate-fade-up animate-normal">
         <div class="w-full md:w-1/2 flex justify-center md:justify-end">
             <img class="w-full max-w-full h-auto md:h-[500px] object-cover"
-                src="../.../../../../../assets/AMBIEFACAPP/VISTA PRINCIPAL DESCUBRE.jpg" alt="">
+                src="../.../../../../../assets/Descubre Nuestras tematicas.jpg" alt="">
         </div>
         <div
             class="w-full md:w-1/2 flex flex-col justify-center items-center md:items-start px-4 bg-[#2cc04f] text-white shadow-md gap-5">
