--- a/src/app/feature/home/inicio/inicio.component.scss
+++ b/src/app/feature/home/inicio/inicio.component.scss
@@ -122,7 +122,7 @@ p {
   height: 100vh;
   overflow: hidden;
   position: relative;
-  background-image: url('../.../../../../../assets/Inicio.jpg');
+  background-image: url('../.../../../../../assets/AMBIEFAC_INICIO.jpg');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
